k8s-infrastructure/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: novapay-payments-vsvc
  namespace: payments-prod
spec:
  hosts:
  - payments.novapay.com
  gateways:
  - novapay-gateway
  http:
  - name: primary
    route:
    - destination:
        host: novapay-payments-stable
      weight: 100
    - destination:
        host: novapay-payments-canary
      weight: 0
